Add Create to other table

--- a/templates/warehousing/admin/content/hospital_departments.html
+++ b/templates/warehousing/admin/content/hospital_departments.html
@@ -101,7 +101,7 @@
     </section>
     <!-- /.content -->
 
-    <!-- Adding Warehouse Modal -->
+    <!-- Adding Hospital Department Modal -->
     <div class="modal fade" id="adding_modal">
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
@@ -154,7 +154,7 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
     </div>
-    <!-- END Adding Warehouse Modal -->
+    <!-- END Adding Hospital Department Modal -->
 {%endblock%}
 
 {%block scripts%}
